--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "st": "~0.2.3",
     "async": "~0.2.10",
     "node-phantom-simple": "~1.2.0",
-    "phantomjs": "~1.9.17"
+    "phantomjs2": "~2.0.2"
   }
 }
